--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,10 @@
 	 padding-top: 40px;
 	 padding-bottom: 40px;
 }
+.wrapper:hover{
+    transform: scale(1.15);
+    transition: 0.5s;
+}
  .wrapper:focus {
 	 outline: 0;
 }
@@ -38,8 +42,11 @@
 	 height: 230px;
 	 margin-bottom: 35px;
 	 border-top-left-radius: 14px;
-	 border-top-right-radius: 14px;
+     border-top-right-radius: 14px;
+     transition: all 0.5 ease;
 }
+
+
  .clash-card__image--barbarian {
 	 background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/195612/barbarian-bg.jpg');
 }
